# EmployeeDatabase

./: .gitignore  CMakeLists.txt  README.md  databaseread  double  doublepointer.c  fileopening.c  filetest  hello  helloworld.c  memory  structsandunions.c  structtest  uniontest
include/: parser.h
memory.dSYM/Contents/Resources/DWARF/: memory
memory.dSYM/Contents/Resources/Relocations/aarch64/: memory.yml
src/: dbparser.c  main.c
